Connect all the application parts

--- a/ExamifyApp/ExaminationPL/Views/PreExam/PreExamView.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/PreExam/PreExamView.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ExaminationDAL.Entities;
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Mvc.TagHelpers;
 
-@model Examination.DAL.Entities.Exam
+@model ExaminationDAL.Entities.Exam
 
 @{
     ViewData["Title"] = "PreExamView";
