--- a/ExamifyApp/ExaminationPL/Views/PreExam/StudentProfile.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/PreExam/StudentProfile.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model Examination.DAL.Entities.Student
+@model ExaminationDAL.Entities.Student
 @{
     ViewData["Title"] = "StudentProfile";
     Layout = null;
