--- a/ExamifyApp/ExaminationPL/Views/_ViewImports.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/_ViewImports.cshtml
@@ -1,2 +1,7 @@
-﻿@using Examination.DAL.Entities
+﻿@using ExaminationDAL.Entities;
+@using ExaminationBLL.ModelVM.DepartmentModelVM;
+@using ExaminationBLL.ModelVM.StudentVM;
+@using ExaminationBLL.ModelVM.InstructorVM;
+@using ExaminationBLL.ModelVM.GenerateVM;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,ExaminationBLL
