--- a/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Sidebar.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Sidebar.cshtml
@@ -2,15 +2,15 @@
     <h3 class="p-relative txt-c mt-0">Examify</h3>
     <ul>
         <li>
-            <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+            <a active-when="Student" class=" d-flex align-center fs-14 c-black rad-6 p-10 " asp-action="getAll" asp-controller="Student">
                 <i class="fa-sharp fa-solid fa-person"></i>
-                <span>Student</span>
+                <span>Students</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="settings.html">
+            <a active-when="Instructor" class="d-flex align-center fs-14 c-black rad-6 p-10 " asp-action="getAll" asp-controller="Instructor">
                 <i class="fa-sharp fa-solid fa-person-chalkboard"></i>
-                <span>Instractor</span>
+                <span>Instructors</span>
             </a>
         </li>
         <li>
@@ -21,7 +21,7 @@
         </li>
         <li>
             <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="projects.html">
-                <i class="fa-sharp fa-solid fa-pen-to-square"></i>  
+                <i class="fa-sharp fa-solid fa-pen-to-square"></i>
                 <span>Exam</span>
             </a>
         </li>
@@ -37,6 +37,6 @@
                 <span>Report</span>
             </a>
         </li>
-       
+
     </ul>
 </div>
