Adding Course And Exam Logic

--- a/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Sidebar.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Sidebar.cshtml
@@ -14,13 +14,13 @@
             </a>
         </li>
         <li>
-            <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="profile.html">
+            <a class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="getAll" asp-controller="Course">
                 <i class="fa-sharp fa-solid fa-bars-progress"></i>
                 <span>Course</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="projects.html">
+            <a class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="getAll" asp-controller="Exam">
                 <i class="fa-sharp fa-solid fa-pen-to-square"></i>
                 <span>Exam</span>
             </a>
