--- a/ExamifyApp/ExaminationPL/Views/Course/EditCourse.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Course/EditCourse.cshtml
@@ -14,19 +14,19 @@
                 <input type="hidden" hidden asp-for="CrsId" class="form-control" id="exampleInputEmail1" aria-describedby="">
             </div>
             <div class="mb-3">
-                <label asp-for="CrsName" class="form-label">Frist Name</label>
+                <label asp-for="CrsName" class="form-label">Course Name</label>
                 <input type="text" asp-for="CrsName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <span asp-validation-for="CrsName" class="text-danger"></span>
                 <!--3-->
             </div>
             <div class="mb-3">
-                <label asp-for="CrsDuration" class="form-label">Last Name</label>
+                <label asp-for="CrsDuration" class="form-label">Course Duration</label>
                 <input type="text" asp-for="CrsDuration" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <span asp-validation-for="CrsDuration" class="text-danger"></span>
             </div>
            
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-">Submit</button>
         </form>
         </<div>
         </div>
