--- a/ExamifyApp/ExaminationPL/Views/PreExam/PreExamView.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/PreExam/PreExamView.cshtml
@@ -109,8 +109,8 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <a asp-controller="CurrentExam" asp-action="Index" asp-route-id="@Model.ExId" class="btn btn-start-exam">Start Exam</a>
-                    @* <a asp-controller="PreExam" asp-action="StudentProfile" class="btn btn-start-exam">Profile</a> *@
+                    <a asp-controller="CurrentExam" asp-action="CheckIfStudentHasExam" asp-route-id="@Model.ExId" class="btn btn-start-exam">Start Exam</a>
+                    <a asp-controller="PreExam" asp-action="StudentProfile" class="btn btn-start-exam">Profile</a>
                 </div>
             </div>
         </div>
@@ -131,3 +131,4 @@
 
 
 
+     
