--- a/ExamifyApp/ExaminationPL/Views/Student/getById.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Student/getById.cshtml
@@ -7,7 +7,7 @@
  <!-- Start Overview -->
           <div class="overview bg-white rad-10 d-flex align-center">
             <div class="avatar-box txt-c p-20">
-            <img class="rad-half mb-10" src="~/Files/Imgs/@Model.StImg" alt="" />
+            <img class="rad-half mb-10" src="~/StudentsImages/@Model.StImg" alt="" />
               <h3 class="m-0">@Model.UserFname  @Model.UserLname</h3>
               <p class="c-grey mt-10">@Model.Email</p>
               
