--- a/ExamifyApp/ExaminationPL/Views/Department/Create.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Department/Create.cshtml
@@ -70,9 +70,8 @@
         </div>
 
         @section JS {
-            @{
-                Html.RenderPartial("_ValidationScriptsPartial");
-            }
+            <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+            <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
    
         }
 
