--- a/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Sidebar.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Sidebar.cshtml
@@ -26,7 +26,7 @@
             </a>
         </li>
         <li>
-            <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="courses.html">
+            <a class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="DisplayDepartments" asp-controller="Department">
                 <i class="fa-solid fa-building"></i>
                 <span>Department</span>
             </a>
