--- a/ExamifyApp/ExaminationPL/Views/Exam/getAll.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Exam/getAll.cshtml
@@ -58,5 +58,7 @@
             $('#myTable').DataTable();
         });
     </script>
+    <partial name="~/Views/Shared/Admin/_JSDataTable.cshtml" />
+
 }
 
