--- a/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Navbar.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Navbar.cshtml
@@ -2,14 +2,12 @@
     <div class="search p-relative">
         <input class="p-10" type="search" placeholder="Type A Keyword" />
     </div>
-    <div class="container">
-        <a asp-action="Login" asp-controller="Account" class="btn btn-dark btn-lg">Logout</a>
-    </div>
+    
     <div class="icons d-flex align-center">
         @* <span class="notification p-relative">
             <i class="fa-regular fa-bell fa-lg"></i>
         </span> *@
-        <img src="imgs/avatar.png" alt="" />
+        <a asp-action="Login" asp-controller="Account" class="btn-log btn-lg"><i class="fa-solid fa-right-from-bracket"></i></a>
         
     </div>
 </div>
