--- a/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Sidebar.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Shared/Admin/_Sidebar.cshtml
@@ -14,25 +14,25 @@
             </a>
         </li>
         <li>
-            <a class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="getAll" asp-controller="Course">
+            <a active-when="Course" class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="getAll" asp-controller="Course">
                 <i class="fa-sharp fa-solid fa-bars-progress"></i>
                 <span>Course</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="getAll" asp-controller="Exam">
+            <a active-when="Exam" class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="getAll" asp-controller="Exam">
                 <i class="fa-sharp fa-solid fa-pen-to-square"></i>
                 <span>Exam</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="DisplayDepartments" asp-controller="Department">
+            <a active-when="Department" class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="DisplayDepartments" asp-controller="Department">
                 <i class="fa-solid fa-building"></i>
                 <span>Department</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="friends.html">
+            <a active-when="Report" class="d-flex align-center fs-14 c-black rad-6 p-10" asp-action="Index" asp-controller="Report">
                 <i class="fa-solid fa-square-poll-horizontal"></i>
                 <span>Report</span>
             </a>
