--- a/ExamifyApp/ExaminationPL/Views/Shared/Student/_Layout.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Shared/Student/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
 <div class="page d-flex">
     <!-- Start Navbar -->
-    <partial name="~/Views/Shared/Admin/_Sidebar.cshtml"/>
+    @* <partial name="~/Views/Shared/Admin/_Sidebar.cshtml"/> *@
     <!-- End Navbar -->
     <div class="content w-full">
             @RenderBody()
