--- a/ExamifyApp/ExaminationPL/Views/Shared/Student/_Sidebar.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Shared/Student/_Sidebar.cshtml
@@ -4,7 +4,7 @@
         <li>
             <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
                 <i class="fa-sharp fa-solid fa-person"></i>
-                <span>Student</span>
+                <span>Profile</span>
             </a>
         </li>
         <li>
