--- a/ExamifyApp/ExaminationPL/Views/Account/Login.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Account/Login.cshtml
@@ -64,21 +64,10 @@
                                     </label>
                                 </div>
 
-                                <input type="submit" value="Login" class="btn btn-block btn-primary">
+                                <input type="submit" value="Login" class="btn-darkLog">
 
-                                <span class="d-block text-left my-4 text-muted">&mdash; or login with &mdash;</span>
-
-                                <div class="social-login">
-                                    <a href="#" class="facebook">
-                                        <span class="icon-facebook mr-3"></span>
-                                    </a>
-                                    <a href="#" class="twitter">
-                                        <span class="icon-twitter mr-3"></span>
-                                    </a>
-                                    <a href="#" class="google">
-                                        <span class="icon-google mr-3"></span>
-                                    </a>
-                                </div>
+                                 
+                               
                             </form>
                         </div>
                     </div>
