--- a/ExamifyApp/ExaminationPL/wwwroot/css/style.css
+++ b/ExamifyApp/ExaminationPL/wwwroot/css/style.css
@@ -9,11 +9,23 @@ p {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Roboto", sans-serif; }
+.btn-darkLog {
+    background-color: black;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 10px;
+    width:100%
+}
 
+.btn-log:hover {
+    color: white
+}
 a {
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease; }
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease;
+}
   a:hover {
     text-decoration: none !important; }
 
@@ -149,7 +161,7 @@ h2 {
   left: 0;
   height: 20px;
   width: 20px;
-  background: #e6e6e6;
+  background: black;
   border-radius: 4px; }
 
 .control--radio .control__indicator {
@@ -157,17 +169,19 @@ h2 {
 
 .control:hover input ~ .control__indicator,
 .control input:focus ~ .control__indicator {
-  background: #ccc; }
+    background: black;
+}
 
 .control input:checked ~ .control__indicator {
   background: #6c63ff; }
 
 .control:hover input:not([disabled]):checked ~ .control__indicator,
 .control input:checked:focus ~ .control__indicator {
-  background: #847dff; }
+    background: black;
+}
 
 .control input:disabled ~ .control__indicator {
-  background: #e6e6e6;
+  background: black;
   opacity: 0.9;
   pointer-events: none; }
 
@@ -194,8 +208,8 @@ h2 {
   transform: translate(-50%, -50%); }
 
 .control--checkbox input:disabled ~ .control__indicator:after {
-  border-color: #7b7b7b; }
+  border-color: black; }
 
 .control--checkbox input:disabled:checked ~ .control__indicator {
-  background-color: #7e0cf5;
+  background-color: black;
   opacity: .2; }
