--- a/ExamifyApp/ExaminationPL/Views/Department/Create.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Department/Create.cshtml
@@ -60,9 +60,7 @@
 
             <div class="mb-3">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="reset" class="btn btn-primary">Reset</button>
-                <button type="" asp-controller="Department" asp-action="DisplayDepartments" class="btn btn-outline-secondary">Cancel</button>
-
+               
             </div>
 
         </form>
@@ -72,6 +70,7 @@
         @section JS {
             <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
             <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-   
+            <script src="~/js/validation-styling.js"></script>
+
         }
 
