--- a/ExamifyApp/ExaminationPL/Views/Department/Edit.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Department/Edit.cshtml
@@ -54,7 +54,7 @@
 
             <div class="mb-3">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="" asp-controller="Department" asp-action="DisplayDepartments" class="btn btn-outline-secondary">Cancel</button>
+                <a  asp-controller="Department" asp-action="DisplayDepartments" class="btn btn-outline-secondary">Cancel</a>
             </div>
         </form>
         </<div>
@@ -63,6 +63,7 @@
         @section JS {
             <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
             <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+            <script src="~/js/validation-styling.js"></script>
 
         }
 
