--- a/ExamifyApp/ExaminationPL/Views/Shared/Admin/_JSDataTable.cshtml
+++ b/ExamifyApp/ExaminationPL/Views/Shared/Admin/_JSDataTable.cshtml
@@ -1,49 +1,58 @@
-﻿
-<script src="~/js/validation-styling.js"></script>
-            <script>
+﻿<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/3.0.0/js/buttons.html5.js"></script>
+<script>
 
 
-            new DataTable('#myTable', {
-                layout: {
-                    topStart: {
-                        buttons: ['print']
-                    }
-                }
-            });
+    new DataTable('#myTable', {
+        layout: {
+            topStart: {
+                buttons: [
+                    'print',
+                    'pdf']
+            }
+        }
+    });
 
 
 
-    </script>
-    <script>
-        $(document).ready(function () {
-            $('.buttons-print').css({
-                'background-color': 'black',
-                'border': 'none',
-                'border-radius': '5px',
-                'color': 'white',
-                'padding': '10px'
-            });
+</script>
+<script>
+    $(document).ready(function () {
+        $('.buttons-print').css({
+            'background-color': 'black',
+            'border': 'none',
+            'border-radius': '5px',
+            'color': 'white',
+            'padding': '10px'
+        });
+        $('.buttons-pdf').css({
+            'background-color': 'black',
+            'border': 'none',
+            'border-radius': '5px',
+            'color': 'white',
+            'padding': '10px'
+        });
+        $('.dt-search label').css({
 
-            $('.dt-search label').css({
+            'background-color': 'black',
+            'border': 'none',
+            'border-radius': '5px',
+            'color': 'white',
+            'padding': '10px'
 
-                'background-color': 'black',
-                'border': 'none',
-                'border-radius': '5px',
-                'color': 'white',
-                'padding': '10px'
-
-            });
+        });
+        $('.dt-input').css({
+            'visibility': 'hidden'
+        });
+        $('.dt-search label').click(function () {
             $('.dt-input').css({
-                'visibility': 'hidden'
-            });
-            $('.dt-search label').click(function () {
-                $('.dt-input').css({
-                    'visibility': 'visible'
-                });
+                'visibility': 'visible'
             });
         });
+    });
 
 
 
-    </script>
-    
+</script>
+
