--- a/ExamifyApp/ExaminationPL/wwwroot/css/style.css
+++ b/ExamifyApp/ExaminationPL/wwwroot/css/style.css
@@ -5,10 +5,22 @@ body {
 p {
   color: #b3b3b3;
   font-weight: 300; }
-
+.divCont{
+    display :flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    margin-top:0px;
+}
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Roboto", sans-serif; }
+    font-family: "Roboto", sans-serif;
+}
 .btn-darkLog {
     background-color: black;
     border: none;
@@ -30,7 +42,10 @@ a {
     text-decoration: none !important; }
 
 .content {
-  padding: 7rem 0; }
+  padding:0;
+  max-width:95vw;
+
+}
 
 h2 {
   font-size: 20px; }
@@ -173,7 +188,7 @@ h2 {
 }
 
 .control input:checked ~ .control__indicator {
-  background: #6c63ff; }
+  background: black; }
 
 .control:hover input:not([disabled]):checked ~ .control__indicator,
 .control input:checked:focus ~ .control__indicator {
